# banded_alignment

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  setup.py
cmake/: AddGoogleTest.cmake  AddPybind.cmake  addBoost.cmake
doc/doxygen/: Doxyfile
doc/sphinx/: conf.py  index.rst
include/banded_alignment/: BandedAlignment.hpp
src/: BandedAlignment.cpp  PythonBindings.cpp  cli.cpp  main.cpp  version.h
src/api/: api.hpp
src/core/: CommandLine.hpp  configure.hpp  logging.cpp  logging.hpp
test/: CMakeLists.txt
test/src/: test_cli.cpp
tests/: CMakeLists.txt
tests/python_tests/: test_bindings.py  test_cpp_tests.py
tests/src/: AllTests.cpp
